--- a/index.html
+++ b/index.html
@@ -131,6 +131,23 @@
             <button class="uploadbutton">UPLOAD</button>
           </div>
         </header>
+        <section class="category_section">
+          <div class="list">
+            <span>All</span>
+            <span>Web design</span>
+            <span>3D</span>
+            <span>App design</span>
+            <span>Animation</span>
+            <span>Illustration</span>
+            <span>Typography</span>
+          </div>
+          <div class="filter">
+            <button>
+              <img src="images/filter.png" alt="filtericonforsection" />
+              <span>Filters</span>
+            </button>
+          </div>
+        </section>
       </div>
     </main>
   </body>
