--- a/index.html
+++ b/index.html
@@ -148,6 +148,149 @@
             </button>
           </div>
         </section>
+        <div class="section_imgs">
+          <div class="grid_img">
+            <div class="picturesection">
+              <img src="images/section-img1.png" alt="gridimg" />
+              <div class="imgs_icon">
+                <img class="twoicon" src="images/section-icon.png" alt="icon" />
+                <img class="twoicon" src="images/heart.png" alt="icon" />
+              </div>
+            </div>
+            <span> UI Components for Unity Gaming</span>
+          </div>
+          <div class="grid_img">
+            <div class="picturesection">
+              <img src="images/section-img2.png" alt="gridimg" />
+              <div class="imgs_icon">
+                <img class="twoicon" src="images/section-icon.png" alt="icon" />
+                <img class="twoicon" src="images/heart.png" alt="icon" />
+              </div>
+            </div>
+            <span>Analytics Mobile App - Blurr Series</span>
+          </div>
+          <div class="grid_img">
+            <div class="picturesection">
+              <img src="images/section-img3.png" alt="gridimg" />
+              <div class="imgs_icon">
+                <img class="twoicon" src="images/section-icon.png" alt="icon" />
+                <img class="twoicon" src="images/heart.png" alt="icon" />
+              </div>
+            </div>
+            <span>Estaro - Dark-mode - Task Management App</span>
+          </div>
+          <div class="grid_img">
+            <div class="picturesection">
+              <img src="images/section-img4.png" alt="gridimg" />
+              <div class="imgs_icon">
+                <img class="twoicon" src="images/section-icon.png" alt="icon" />
+                <img class="twoicon" src="images/heart.png" alt="icon" />
+              </div>
+            </div>
+            <span>Live streaming application for gamers.</span>
+          </div>
+          <div class="grid_img">
+            <div class="picturesection">
+              <img src="images/section-img5.png" alt="gridimg" />
+              <div class="imgs_icon">
+                <img class="twoicon" src="images/section-icon.png" alt="icon" />
+                <img class="twoicon" src="images/heart.png" alt="icon" />
+              </div>
+            </div>
+            <span>Dark Mockup for Unity Gaming</span>
+          </div>
+          <div class="grid_img">
+            <div class="picturesection">
+              <img src="images/section-img6.png" alt="gridimg" />
+              <div class="imgs_icon">
+                <img class="twoicon" src="images/section-icon.png" alt="icon" />
+                <img class="twoicon" src="images/heart.png" alt="icon" />
+              </div>
+            </div>
+            <span>SMM - Social Media Management - App UI</span>
+          </div>
+          <div class="grid_img">
+            <div class="picturesection">
+              <img src="images/section-img7.png" alt="gridimg" />
+              <div class="imgs_icon">
+                <img class="twoicon" src="images/section-icon.png" alt="icon" />
+                <img class="twoicon" src="images/heart.png" alt="icon" />
+              </div>
+            </div>
+            <span>Food App 2.0</span>
+          </div>
+          <div class="grid_img">
+            <div class="picturesection">
+              <img src="images/section-img8.png" alt="gridimg" />
+              <div class="imgs_icon">
+                <img class="twoicon" src="images/section-icon.png" alt="icon" />
+                <img class="twoicon" src="images/heart.png" alt="icon" />
+              </div>
+            </div>
+            <span>Live streaming application for gamers.</span>
+          </div>
+        </div>
+        <div class="moreinfobt">
+          <button>Load more</button>
+        </div>
+        <section class="follower_section">
+          <div class="followers">
+            <div class="follower_title">
+              <h1>Top Designers</h1>
+              <span><a href="#">View all</a></span>
+            </div>
+            <div class="section_users">
+              <div class="designer">
+                <img src="images/profile-2.png" alt="designerimg" />
+                <h3>Tran Mau Tri Tam</h3>
+                <span>Sai Gon, Vietnam</span>
+                <button>Following</button>
+              </div>
+              <div class="designer">
+                <img src="images/section-profile.png" alt="designerimg" />
+                <h3>Ghulam Rasool</h3>
+                <span>Dubai</span>
+                <button>Follow</button>
+              </div>
+              <div class="designer">
+                <img src="images/section-profile1.png" alt="designerimg" />
+                <h3>Zhenya Rynzhuk</h3>
+                <span>New York City, NY</span>
+                <button>Follow</button>
+              </div>
+              <div class="designer">
+                <img src="images/profile-3.png" alt="designerimg" />
+                <h3>Ghani Pradita</h3>
+                <span>Yogyakarta, Indonesia</span>
+                <button>Follow</button>
+              </div>
+              <div class="designer">
+                <img src="images/profile-1.png" alt="designerimg" />
+                <h3>Sajon</h3>
+                <span>Earth</span>
+                <button>Following</button>
+              </div>
+              <div class="designer">
+                <img src="images/profile-4.png" alt="designerimg" />
+                <h3>David Kovalev</h3>
+                <span>Sarasota, FL</span>
+                <button>Follow</button>
+              </div>
+              <div class="designer">
+                <img src="images/profile-5.png" alt="designerimg" />
+                <h3>Ryan Putnam</h3>
+                <span>Colorado Springs</span>
+                <button>Follow</button>
+              </div>
+              <div class="designer">
+                <img src="images/section-profile2.png" alt="designerimg" />
+                <h3>Dmitry Lauretsky</h3>
+                <span>Omsk, Russia</span>
+                <button>Follow</button>
+              </div>
+            </div>
+          </div>
+        </section>
       </div>
     </main>
   </body>
