--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
                 <img src="images/profile-2.png" alt="designerimg" />
                 <h3>Tran Mau Tri Tam</h3>
                 <span>Sai Gon, Vietnam</span>
-                <button>Following</button>
+                <button id="userfollowing">Following</button>
               </div>
               <div class="designer">
                 <img src="images/section-profile.png" alt="designerimg" />
@@ -267,8 +267,8 @@
               <div class="designer">
                 <img src="images/profile-1.png" alt="designerimg" />
                 <h3>Sajon</h3>
-                <span>Earth</span>
-                <button>Following</button>
+                <span class="otherprofile">Earth</span>
+                <button id="userfollowings">Following</button>
               </div>
               <div class="designer">
                 <img src="images/profile-4.png" alt="designerimg" />
@@ -293,5 +293,134 @@
         </section>
       </div>
     </main>
+    <footer>
+      <div class="footer_container">
+        <div class="fordesigners_list">
+          <ul>
+            <li>
+              <a class="footer_title" href="#">For designers</a>
+            </li>
+            <li>
+              <a href="#">Go Pro!</a>
+            </li>
+            <li>
+              <a href="#">Explore design work</a>
+            </li>
+            <li>
+              <a href="#">Design blog</a>
+            </li>
+            <li>
+              <a href="#">Overtime podcast</a>
+            </li>
+            <li>
+              <a href="#">Dribbble meetups</a>
+            </li>
+            <li>
+              <a href="#">Playoffs</a>
+            </li>
+            <li>
+              <a href="#">Weekly Warm-Up</a>
+            </li>
+            <li>
+              <a href="#">Code of conduct </a>
+            </li>
+          </ul>
+        </div>
+        <div class="hiredesigners_list">
+          <ul>
+            <li>
+              <a class="footer_title" href="#">Hire designers</a>
+            </li>
+            <li>
+              <a href="#">Post a job opening</a>
+            </li>
+            <li>
+              <a href="#">Post a freelance project</a>
+            </li>
+            <li>
+              <a href="#">Search for designers</a>
+            </li>
+            <li>
+              <a href="#">Brands</a>
+            </li>
+            <li>
+              <a href="#">Advertise with us</a>
+            </li>
+          </ul>
+        </div>
+        <div class="company_list">
+          <ul>
+            <li>
+              <a class="footer_title" href="#">Company</a>
+            </li>
+            <li>
+              <a href="#">About</a>
+            </li>
+            <li>
+              <a href="#">Careers</a>
+            </li>
+            <li>
+              <a href="#">Support</a>
+            </li>
+            <li>
+              <a href="#">Media kit</a>
+            </li>
+            <li>
+              <a href="#">Dribbble shop</a>
+            </li>
+            <li>
+              <a href="#">Testimonials</a>
+            </li>
+            <li>
+              <a href="#">API</a>
+            </li>
+            <li>
+              <a href="#">Terms of service</a>
+            </li>
+            <li>
+              <a href="#">Privacy policy</a>
+            </li>
+          </ul>
+        </div>
+        <div class="direct_list">
+          <ul>
+            <li>
+              <a class="footer_title" href="#">Directories</a>
+            </li>
+            <li>
+              <a href="#">Top designers</a>
+            </li>
+            <li>
+              <a href="#">Top design teams</a>
+            </li>
+            <li>
+              <a href="#">Design jobs</a>
+            </li>
+            <li>
+              <a href="#">Tags</a>
+            </li>
+            <li>
+              <a href="#">Places</a>
+            </li>
+            <li>
+              <a href="#">Design assets</a>
+            </li>
+            <li>
+              <a href="#">Shop Creative Market</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div class="lastfooter">
+        <div class="footer_icon">
+          <img src="images/fbicon.png" alt="fb icon" />
+          <img src="images/instagramicon.png" alt="instagam icon" />
+          <img src="images/twittericon.png" alt="twitter icon" />
+        </div>
+        <div class="footer_text">
+          <span>For Smartacademy</span>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
