added second page

--- a/index.html
+++ b/index.html
@@ -7,9 +7,12 @@
     <meta name="keywords" content="Design Today" />
     <meta name="description" content="For Smartacademy" />
     <meta name="author" content="Aleksandre Latsabidze" />
-    <!-- <meta property="og:url" content="" /> -->
-    <!-- <meta property="og:type" content="Design Today" /> -->
-    <!-- <meta property="og:title" content="Design Today" /> -->
+    <meta
+      property="og:url"
+      content="https://aleksandrelcb.github.io/The-second-project/"
+    />
+    <meta property="og:type" content="Design Today" />
+    <meta property="og:title" content="Design's Website" />
     <meta property="og:description" content="this website is about design" />
     <meta
       property="og:image"
@@ -17,6 +20,7 @@
     />
 
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/media.css" />
     <title>Design Today</title>
   </head>
   <body>
@@ -116,18 +120,21 @@
           <div class="profile">
             <span>GO PRO!</span>
             <div class="smallicon">
-              <img src="images/mailicon.png" alt="mailiconforheader" />
+              <a href="#"
+                ><img src="images/mailicon.png" alt="mailiconforheader" />
+              </a>
               <i></i>
             </div>
             <div class="smallicon">
-              <img src="images/icon.png" alt="iconforheader" />
+              <a href="#"><img src="images/icon.png" alt="iconforheader" /></a>
               <i></i>
             </div>
-            <img
-              class="largeiconpofile"
-              src="images/main-pofile.png"
-              alt="profileforheader"
-            />
+            <a href="profile.html"
+              ><img
+                class="largeiconpofile"
+                src="images/main-pofile.png"
+                alt="profileforheader"
+            /></a>
             <button class="uploadbutton">UPLOAD</button>
           </div>
         </header>
@@ -291,136 +298,138 @@
             </div>
           </div>
         </section>
+        <footer>
+          <div class="footer_lists">
+            <div class="footer_container">
+              <div>
+                <ul>
+                  <li>
+                    <a class="footer_title" href="#">For designers</a>
+                  </li>
+                  <li>
+                    <a href="#">Go Pro!</a>
+                  </li>
+                  <li>
+                    <a href="#">Explore design work</a>
+                  </li>
+                  <li>
+                    <a href="#">Design blog</a>
+                  </li>
+                  <li>
+                    <a href="#">Overtime podcast</a>
+                  </li>
+                  <li>
+                    <a href="#">Dribbble meetups</a>
+                  </li>
+                  <li>
+                    <a href="#">Playoffs</a>
+                  </li>
+                  <li>
+                    <a href="#">Weekly Warm-Up</a>
+                  </li>
+                  <li>
+                    <a href="#">Code of conduct </a>
+                  </li>
+                </ul>
+              </div>
+              <div>
+                <ul>
+                  <li>
+                    <a class="footer_title" href="#">Hire designers</a>
+                  </li>
+                  <li>
+                    <a href="#">Post a job opening</a>
+                  </li>
+                  <li>
+                    <a href="#">Post a freelance project</a>
+                  </li>
+                  <li>
+                    <a href="#">Search for designers</a>
+                  </li>
+                  <li>
+                    <a href="#">Brands</a>
+                  </li>
+                  <li>
+                    <a href="#">Advertise with us</a>
+                  </li>
+                </ul>
+              </div>
+              <div>
+                <ul>
+                  <li>
+                    <a class="footer_title" href="#">Company</a>
+                  </li>
+                  <li>
+                    <a href="#">About</a>
+                  </li>
+                  <li>
+                    <a href="#">Careers</a>
+                  </li>
+                  <li>
+                    <a href="#">Support</a>
+                  </li>
+                  <li>
+                    <a href="#">Media kit</a>
+                  </li>
+                  <li>
+                    <a href="#">Dribbble shop</a>
+                  </li>
+                  <li>
+                    <a href="#">Testimonials</a>
+                  </li>
+                  <li>
+                    <a href="#">API</a>
+                  </li>
+                  <li>
+                    <a href="#">Terms of service</a>
+                  </li>
+                  <li>
+                    <a href="#">Privacy policy</a>
+                  </li>
+                </ul>
+              </div>
+              <div>
+                <ul>
+                  <li>
+                    <a class="footer_title" href="#">Directories</a>
+                  </li>
+                  <li>
+                    <a href="#">Top designers</a>
+                  </li>
+                  <li>
+                    <a href="#">Top design teams</a>
+                  </li>
+                  <li>
+                    <a href="#">Design jobs</a>
+                  </li>
+                  <li>
+                    <a href="#">Tags</a>
+                  </li>
+                  <li>
+                    <a href="#">Places</a>
+                  </li>
+                  <li>
+                    <a href="#">Design assets</a>
+                  </li>
+                  <li>
+                    <a href="#">Shop Creative Market</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+          <div class="lastfooter">
+            <div class="footer_icon">
+              <img src="images/fbicon.png" alt="fb icon" />
+              <img src="images/instagramicon.png" alt="instagam icon" />
+              <img src="images/twittericon.png" alt="twitter icon" />
+            </div>
+            <div class="footer_text">
+              <span>For</span> <span class="smartacdmy">Smartacademy</span>
+            </div>
+          </div>
+        </footer>
       </div>
     </main>
-    <footer>
-      <div class="footer_container">
-        <div class="fordesigners_list">
-          <ul>
-            <li>
-              <a class="footer_title" href="#">For designers</a>
-            </li>
-            <li>
-              <a href="#">Go Pro!</a>
-            </li>
-            <li>
-              <a href="#">Explore design work</a>
-            </li>
-            <li>
-              <a href="#">Design blog</a>
-            </li>
-            <li>
-              <a href="#">Overtime podcast</a>
-            </li>
-            <li>
-              <a href="#">Dribbble meetups</a>
-            </li>
-            <li>
-              <a href="#">Playoffs</a>
-            </li>
-            <li>
-              <a href="#">Weekly Warm-Up</a>
-            </li>
-            <li>
-              <a href="#">Code of conduct </a>
-            </li>
-          </ul>
-        </div>
-        <div class="hiredesigners_list">
-          <ul>
-            <li>
-              <a class="footer_title" href="#">Hire designers</a>
-            </li>
-            <li>
-              <a href="#">Post a job opening</a>
-            </li>
-            <li>
-              <a href="#">Post a freelance project</a>
-            </li>
-            <li>
-              <a href="#">Search for designers</a>
-            </li>
-            <li>
-              <a href="#">Brands</a>
-            </li>
-            <li>
-              <a href="#">Advertise with us</a>
-            </li>
-          </ul>
-        </div>
-        <div class="company_list">
-          <ul>
-            <li>
-              <a class="footer_title" href="#">Company</a>
-            </li>
-            <li>
-              <a href="#">About</a>
-            </li>
-            <li>
-              <a href="#">Careers</a>
-            </li>
-            <li>
-              <a href="#">Support</a>
-            </li>
-            <li>
-              <a href="#">Media kit</a>
-            </li>
-            <li>
-              <a href="#">Dribbble shop</a>
-            </li>
-            <li>
-              <a href="#">Testimonials</a>
-            </li>
-            <li>
-              <a href="#">API</a>
-            </li>
-            <li>
-              <a href="#">Terms of service</a>
-            </li>
-            <li>
-              <a href="#">Privacy policy</a>
-            </li>
-          </ul>
-        </div>
-        <div class="direct_list">
-          <ul>
-            <li>
-              <a class="footer_title" href="#">Directories</a>
-            </li>
-            <li>
-              <a href="#">Top designers</a>
-            </li>
-            <li>
-              <a href="#">Top design teams</a>
-            </li>
-            <li>
-              <a href="#">Design jobs</a>
-            </li>
-            <li>
-              <a href="#">Tags</a>
-            </li>
-            <li>
-              <a href="#">Places</a>
-            </li>
-            <li>
-              <a href="#">Design assets</a>
-            </li>
-            <li>
-              <a href="#">Shop Creative Market</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-      <div class="lastfooter">
-        <div class="footer_icon">
-          <img src="images/fbicon.png" alt="fb icon" />
-          <img src="images/instagramicon.png" alt="instagam icon" />
-          <img src="images/twittericon.png" alt="twitter icon" />
-        </div>
-        <div class="footer_text">
-          <span>For Smartacademy</span>
-        </div>
-      </div>
-    </footer>
   </body>
 </html>
