added meta tags

--- a/index.html
+++ b/index.html
@@ -16,9 +16,8 @@
     <meta property="og:description" content="this website is about design" />
     <meta
       property="og:image"
-      content="https://aleksandrelcb.github.io/The-second-project/"
+      content="https://miro.medium.com/max/915/0*4DpFVUP_VfkhzSIL"
     />
-
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/media.css" />
     <title>Design Today</title>
