--- a/profile.html
+++ b/profile.html
@@ -4,8 +4,30 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="keywords" content="Design Today Information" />
+    <meta name="description" content="For Smartacademy" />
+    <meta name="author" content="Aleksandre Latsabidze" />
+    <meta
+      property="og:url"
+      content="https://aleksandrelcb.github.io/The-second-project/"
+    />
+    <meta
+      property="og:url"
+      content="https://aleksandrelcb.github.io/The-second-project/profile.html"
+    />
+    <meta property="og:type" content="Design" />
+    <meta property="og:title" content="This website is about user" />
+    <meta
+      property="og:description"
+      content="This website is to get user information"
+    />
+    <meta
+      property="og:image"
+      content="https://mir-s3-cdn-cf.behance.net/project_modules/1400/2e3dff35309541.56f1c115d6f5a.jpg"
+    />
     <title>Design Today</title>
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/media.css" />
   </head>
   <body>
     <main>
