--- a/profile.html
+++ b/profile.html
@@ -150,85 +150,85 @@
             <thead>
               <tr>
                 <th>Date</th>
-                <th>Order ID</th>
+                <th class="tabletd">Order ID</th>
                 <th>Name</th>
                 <th>Price</th>
-                <th>Quantity</th>
-                <th>Total</th>
+                <th class="tabletd">Quantity</th>
+                <th class="tabletd">Total</th>
               </tr>
             </thead>
             <tbody>
               <tr>
                 <td>2020-09-29 95:57</td>
-                <td>200398</td>
+                <td class="tabletd">200398</td>
                 <td>iPhone X 64Gb Grey</td>
                 <td>$ 999.00</td>
-                <td>1</td>
-                <td>$ 999.00</td>
+                <td class="tabletd">1</td>
+                <td class="tabletd">$ 999.00</td>
               </tr>
               <tr>
                 <td>2020-09-29 95:57</td>
-                <td>200398</td>
+                <td class="tabletd">200398</td>
                 <td>iPhone X 64Gb Grey</td>
                 <td>$ 999.00</td>
-                <td>1</td>
-                <td>$ 999.00</td>
+                <td class="tabletd">1</td>
+                <td class="tabletd">$ 999.00</td>
               </tr>
               <tr>
                 <td>2020-09-29 95:57</td>
-                <td>200398</td>
+                <td class="tabletd">200398</td>
                 <td>iPhone X 64Gb Grey</td>
                 <td>$ 999.00</td>
-                <td>1</td>
-                <td>$ 999.00</td>
+                <td class="tabletd">1</td>
+                <td class="tabletd">$ 999.00</td>
               </tr>
               <tr>
                 <td>2020-09-29 95:57</td>
-                <td>200398</td>
+                <td class="tabletd">200398</td>
                 <td>iPhone X 64Gb Grey</td>
                 <td>$ 999.00</td>
-                <td>1</td>
-                <td>$ 999.00</td>
+                <td class="tabletd">1</td>
+                <td class="tabletd">$ 999.00</td>
               </tr>
               <tr>
                 <td>2020-09-29 95:57</td>
-                <td>200398</td>
+                <td class="tabletd">200398</td>
                 <td>iPhone X 64Gb Grey</td>
                 <td>$ 999.00</td>
-                <td>1</td>
-                <td>$ 999.00</td>
+                <td class="tabletd">1</td>
+                <td class="tabletd">$ 999.00</td>
               </tr>
               <tr>
                 <td>2020-09-29 95:57</td>
-                <td>200398</td>
+                <td class="tabletd">200398</td>
                 <td>iPhone X 64Gb Grey</td>
                 <td>$ 999.00</td>
-                <td>1</td>
-                <td>$ 999.00</td>
+                <td class="tabletd">1</td>
+                <td class="tabletd">$ 999.00</td>
               </tr>
               <tr>
                 <td>2020-09-29 95:57</td>
-                <td>200398</td>
+                <td class="tabletd">200398</td>
                 <td>iPhone X 64Gb Grey</td>
                 <td>$ 999.00</td>
-                <td>1</td>
-                <td>$ 999.00</td>
+                <td class="tabletd">1</td>
+                <td class="tabletd">$ 999.00</td>
               </tr>
               <tr>
                 <td>2020-09-29 95:57</td>
-                <td>200398</td>
+                <td class="tabletd">200398</td>
                 <td>iPhone X 64Gb Grey</td>
                 <td>$ 999.00</td>
-                <td>1</td>
-                <td>$ 999.00</td>
+                <td class="tabletd">1</td>
+                <td class="tabletd">$ 999.00</td>
               </tr>
               <tr>
                 <td>2020-09-29 95:57</td>
-                <td>200398</td>
+                <td class="tabletd">200398</td>
                 <td>iPhone X 64Gb Grey</td>
                 <td>$ 999.00</td>
-                <td>1</td>
-                <td>$ 999.00</td>
+                <td class="tabletd">1</td>
+                <td class="tabletd">$ 999.00</td>
               </tr>
             </tbody>
           </table>
@@ -355,9 +355,11 @@
           </div>
           <div class="lastfooter">
             <div class="footer_icon">
-              <img src="images/fbicon.png" alt="fb icon" />
-              <img src="images/instagramicon.png" alt="instagam icon" />
-              <img src="images/twittericon.png" alt="twitter icon" />
+              <a href="#">
+                <img src="images/fbicon.png" alt="fb icon" />
+                <img src="images/instagramicon.png" alt="instagam icon" />
+                <img src="images/twittericon.png" alt="twitter icon" />
+              </a>
             </div>
             <div class="footer_text">
               <span>For</span> <span class="smartacdmy">Smartacademy</span>
