--- a/index.html
+++ b/index.html
@@ -139,13 +139,15 @@
         </header>
         <section class="category_section">
           <div class="list">
-            <span>All</span>
-            <span>Web design</span>
-            <span>3D</span>
-            <span>App design</span>
-            <span>Animation</span>
-            <span>Illustration</span>
-            <span>Typography</span>
+            <a href="#">
+              <span>All</span>
+              <span>Web design</span>
+              <span>3D</span>
+              <span>App design</span>
+              <span>Animation</span>
+              <span>Illustration</span>
+              <span>Typography</span>
+            </a>
           </div>
           <div class="filter">
             <button>
@@ -419,9 +421,11 @@
           </div>
           <div class="lastfooter">
             <div class="footer_icon">
-              <img src="images/fbicon.png" alt="fb icon" />
-              <img src="images/instagramicon.png" alt="instagam icon" />
-              <img src="images/twittericon.png" alt="twitter icon" />
+              <a href="#">
+                <img src="images/fbicon.png" alt="fb icon" />
+                <img src="images/instagramicon.png" alt="instagam icon" />
+                <img src="images/twittericon.png" alt="twitter icon" />
+              </a>
             </div>
             <div class="footer_text">
               <span>For</span> <span class="smartacdmy">Smartacademy</span>
